fix: update VSCode settings to use Biome as the default formatter; enhance scrollbar styles in base.css

--- a/src/assets/styles/system/base.css
+++ b/src/assets/styles/system/base.css
@@ -2,8 +2,23 @@
    Base Layer
    ======================================== */
 @layer base {
+	::-webkit-scrollbar {
+		width: 5px;
+	}
+
+	::-webkit-scrollbar-track {
+		background: transparent;
+	}
+
+	::-webkit-scrollbar-thumb {
+		background: var(--color-border);
+		border-radius: 5px;
+	}
+
 	* {
 		@apply border-border;
+		scrollbar-width: thin;
+		scrollbar-color: var(--color-border) transparent;
 	}
 
 	body {
